Rely on API to retrieve data

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Nicanor008/kenya-regions#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "mongoose": "^6.4.7"
   }
 }
